header should route users back to the login page

--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -24,9 +24,12 @@
     </form>
     <button
       class="btn btn-primary btn-group"
-      type="submit"
       [routerLink]="['/signupuser']"
     >User Signup</button>
+    <button
+      class="btn btn-primary btn-group"
+      [routerLink]="['/signupstylist']"
+    >Stylist Signup</button>
   </div>
   <!-- <div class="container row" style="padding-top: 20px; padding-bottom: 20px; text-align: center; margin: auto">
 
