--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.html
@@ -31,6 +31,6 @@
     <button
       class="btn btn-primary btn-group"
       type="submit"
-    >Sign Up</button>
+    >Submit</button>
   </form>
 </div>
