--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.html
@@ -28,6 +28,13 @@
         ngModel
         name="email">
     <br>
+    <label for="form-group">Billing Address</label>
+      <input
+        type="address"
+        id="address"
+        ngModel
+        name="address">
+    <br>
     <label for="form-group">Link to Personal Site (optional)</label>
       <input
         type="url"
@@ -42,7 +49,7 @@
             type="checkbox"
             id="service"
             ngModel
-            name="service"
+            [name]="service"
           >{{ service }}
         </span>
     </span>
