--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -4,5 +4,6 @@ Bookings:
   <booking
   [bookingInformation]="booking"
   (confirmBooking)="confirmBooking($event)"
+  (deleteBooking)="deleteBooking($event)"
   ></booking>
 </div>
