--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,9 +1,10 @@
 <h2>Hello world</h2>
 Bookings:
-<div *ngFor="let booking of bookings">
+<div *ngFor="let booking of bookings; let i = index;">
   <booking
   [bookingInformation]="booking"
-  (confirmBooking)="confirmBooking($event)"
-  (deleteBooking)="deleteBooking($event)"
+  (confirmBooking)="confirmBooking($event, i)"
+  (deleteBooking)="deleteBooking($event, i)"
+  (completeBooking)="completeBooking($event, i)"
   ></booking>
 </div>
