add navbar to stylist

--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,4 +1,5 @@
 <h2>Hello world</h2>
+<customer-navbar></customer-navbar>
 Bookings:
 <div *ngFor="let booking of bookings; let i = index;">
   <booking
