render bookings due to customer home screen

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -16,4 +16,9 @@
     <customer-map [coordinates]="currentLocation"></customer-map>
     <button (click)="getLocation()">See Coordinates</button>
   </div>
+  <div *ngIf="!!bookingsDue">
+    <div *ngFor="let booking of bookingsDue">
+      I OWE {{booking.name}} MONEY!!!!
+    </div>
+  </div>
 </div>
