--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -1,24 +1,24 @@
 <!--   <customer-dropdown [customerId]="customerId"></customer-dropdown> -->
 <div class="poppaDiv">
   <div class="container row">
-    <h1>Ding Dong: It's Cut Time</h1>
+    <h2>Ding Dong: It's Cut Time</h2>
     <div class="container-fluid miniContainer">
       <nav class="navbar navbar-default superNav">
         <ul class="nav nav-pills unorderedList">
           <li class="title">
-            <h4>Welcome {{ currentCustomer }}.  Where are you located?</h4>
+            <h4>Welcome {{ currentCustomer }}, where are you located?</h4>
           </li>
           <li class="formElement">
             <form class="navbar-form navbar-left">
               <div class="form-group">
                 <input
                   class="form-control"
-                  placeholder="street address"
+                  placeholder="Enter your location"
                   #streetAddress
-                  (change)="handleStreetAddressChange(streetAddress.value)"
+                  (ngModelChange)="locationChange.emit(streetAddress)"
                 >
               </div>
-              <button class="btn btn-default" (click)="showDropDown()">{{currentCustomer}}</button>
+              <button class="btn btn-default" (click)="handleSearchLocationChange(streetAddress.value)">Search</button>
             </form>
           </li>
 
