--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -1,7 +1,7 @@
 .poppaDiv {
   border-top: 2px solid black;
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,5 +26,5 @@ h1 {
 }
 
 .woo {
-  padding: 1em;
+  margin: 6em;
 }
