--- a/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
+++ b/thesis-app/src/app/registration/components/signup-user/signup-user.component.css
@@ -2,9 +2,13 @@ h3 {
   flex: 1 1 100%;
 }
 
+input {
+  background-color: #d3d3d3;
+}
+
 .poppaDiv {
   width: 100%;
-  height: 50vh;
+  height: 65vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,12 +16,14 @@ h3 {
 }
 
 .myForm {
-  height: 75%;
+  height: 80%;
   width: 65%;
   flex: 1 1 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  border: 2px solid;
+  border-top: 2px solid;
+  margin-top: 0px;
 }
+
