--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -2,9 +2,13 @@ h3 {
   flex: 1 1 100%;
 }
 
+input {
+  background-color: #d3d3d3;
+}
+
 .poppaDiv {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,15 +18,16 @@ h3 {
 .myForm {
   height: 100%;
   flex: 1 1 100%;
-  border: 2px solid;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  border-top: 2px solid black;
 }
 
 .spanContainer {
   padding: 2em;
+  height: 25%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -31,7 +36,7 @@ h3 {
 
 .spanContainer > * {
   flex: 1 1 25%;
-  padding: .25em;
+  padding: .10em;
   display: flex;
   justify-content: center;
   align-items: center;
