factor out bootstrap and modify width of poppadiv to 90

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,29 +1,28 @@
 <div *ngIf="!!isProfileFetched">
-  <div class="container row">
-    <customer-navbar
-      [customerId]="customerProfile.id"
+<customer-navbar
+  [customerId]="customerProfile.id"
+  [searchLocation]="searchLocation"
+  (locationChange)="onSearchLocationChange($event)"
+></customer-navbar>
+<div class="poppaDiv">
+  <div *ngFor="let stylist of stylistsCloseToYou">
+    <close-to-you
+      [stylistInformation]="stylist"
+      [routerLink]="['/stylistProfile', stylist.id]"
+    ></close-to-you>
+  </div>
+    <customer-map
+      [coordinates]="currentLocation"
       [searchLocation]="searchLocation"
-      (locationChange)="onSearchLocationChange($event)"
-    >
-    </customer-navbar>
-    <div class="container row">
-      Here are the stylists closest to you:
-      <div *ngFor="let stylist of stylistsCloseToYou">
-        <close-to-you
-          [stylistInformation]="stylist"
-          [routerLink]="['/stylistProfile', stylist.id]"
-        ></close-to-you>
-      </div>
-        <customer-map
-          [coordinates]="currentLocation"
-          [searchLocation]="searchLocation"
-          >
-        </customer-map>
-    </div>
+      >
+    </customer-map>
+</div>
+
+
+
+<div *ngIf="!!bookingsDue">
+  <div *ngFor="let booking of bookingsDue">
+    I OWE {{booking.name}} MONEY!!!!
   </div>
-  <div *ngIf="!!bookingsDue">
-    <div *ngFor="let booking of bookingsDue">
-      I OWE {{booking.name}} MONEY!!!!
-    </div>
-  </div>
+</div>
 </div>
