--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -1,21 +1,38 @@
 .poppaDiv {
-  height: 10vh;
-  width: 100%;
+  height: 25vh;
+  width: 90%;
   display: flex;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;*/
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: 3em;
+  border: 2px solid;
 }
 
-h2 {
-  padding-left: 2ch;
+h1 {
   text-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
   width: 100%;
+  flex: 1 1;
+  align-self: center;
 }
+
+.title {
+  flex: 1 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid red;
+  flex-direction: column;
+  width: 100%;
+}
+
 .container-fluid,
 .miniContainer {
-  width: 100%;
+  width: 90%;
   height: 25%;
+  flex: 1 1 100%;
+  border: 2px solid blue;
 }
 
 .superNav {
@@ -30,7 +47,7 @@ h2 {
 }
 
 li,
-.title {
+.customer {
   width: 40%;
 }
 
