--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -3,7 +3,9 @@
 <div class="poppaDiv">
   <div class="miniContainer">
     <div class="title">
-      <h1>Ding Dong: It's Cut Time</h1>
+      <div>
+        <h1>Ding Dong: It's Cut Time</h1>
+      </div>
     </div>
     <nav class="superNav">
       <ul class="unorderedList">
