--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -1,12 +1,12 @@
 .poppaDiv {
-  height: 25vh;
+  height: 25%;
   width: 90%;
   display: flex;
-  /*flex-wrap: wrap;*/
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 3em;
+  margin-left: 3em;
+  margin-top: 3em;
 }
 
 h1 {
@@ -28,9 +28,10 @@ h1 {
 .container-fluid,
 .miniContainer {
   width: 100%;
-  height: 25%;
+  height: 20%;
   flex: 1 1 100%;
   border-bottom: 2px solid black;
+  margin-bottom: 2em;
 }
 
 .superNav {
@@ -42,6 +43,16 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  list-style: none;
+}
+
+.superForm {
+  display: flex;
+}
+
+input {
+  width: 25em;
+  background-color: #d3d3d3;
 }
 
 li,
@@ -60,8 +71,14 @@ li,
 
 .dropdown {
   position: relative;
-  display: inline-block;
+  display: flex;
   width: 10%;
+  justify-content: center;
+  align-items: center;
+}
+
+.nestedDrop {
+  flex: 1 1 100%;
 }
 
 .dropdown-content {
