--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -71,14 +71,8 @@ li,
 
 .dropdown {
   position: relative;
-  display: flex;
+  display: absolute;
   width: 10%;
-  justify-content: center;
-  align-items: center;
-}
-
-.nestedDrop {
-  flex: 1 1 100%;
 }
 
 .dropdown-content {
@@ -91,13 +85,14 @@ li,
   z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+.caret:hover .dropdown-content {
   display: block;
 }
 
 .dropdownUl * {
   list-style-type: none;
   width: 100%;
+  height: 100%;
   box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
 }
 
