Fix map initialization

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -15,7 +15,6 @@
         ></close-to-you>
       </div>
         <customer-map
-          [coordinates]="currentLocation"
           [searchLocation]="searchLocation"
           >
         </customer-map>
@@ -27,3 +26,5 @@
     </div>
   </div>
 </div>
+
+<!-- [coordinates]="currentLocation" -->
