align the home components next to each other on the cust home page

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.css
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.css
@@ -1,6 +1,6 @@
 .poppaDiv {
   border: 2px solid red;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,12 +8,17 @@
 
 .stylistContainer {
   border: 2px solid red;
-  flex: 1 1 48%;
+  flex: 1 1 55%;
   height: 100%;
 }
 
 .mapContainer {
-  border: 2px solid red;
-  flex: 1 1 48%;
+  flex: 1 1 43%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.map {
+  width: 100%;
+}
