add stylesheet helloworld for closetoyou component

--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -13,6 +13,6 @@
   </div>
 </div> -->
 
-{{stylistInformation.name}}
+<div class="hello">{{stylistInformation.name}}</div>
 {{stylistInformation.site_url}}
 {{stylistInformation.phonenumber}}
