--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
@@ -1,3 +1,10 @@
-.hello {
+.poppaDiv {
+  border: 2px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stylistInfo {
   border: 2px solid red;
 }
