--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 35vh;
+  height: 100%;
   width: 95%;
   margin: 5ch;
 }
@@ -21,16 +21,19 @@
 .profile {
   display: flex;
   flex-wrap: wrap;
+  padding: 1.5em;
 }
 
-.profileimage {
+.profileImage {
   border-radius: 150px;
   padding-top: 5ch;
 }
 
-.locationwrapper {
+.locationWrapper {
   flex: 1 1;
-  width: 30%;
+  width: 33%;
+  padding: 1em;
+  height: 100%;
 }
 
 .latLong {
@@ -39,10 +42,10 @@
   width: 100%;
 }
 
-.servicescontainer {
+.servicesContainer {
   /*border: 2px solid red;*/
   flex: 1 1;
-  width: 68%;
+  width: 66%;
 }
 
 .personalcontainer {
@@ -74,7 +77,7 @@ textarea {
   align-self: right;
 }
 
-.liststyles {
+.listStyles {
   border-bottom: 2px solid black;
   width: 100%;
   display: flex;
@@ -83,7 +86,7 @@ textarea {
   flex-wrap: wrap;
 }
 
-.styleitems {
+.styleItems {
   padding: 3px;
   margin: 3px;
 }
