--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 95%;
+  width: 93%;
   margin: 5ch;
 }
 
@@ -31,10 +31,25 @@
 
 .locationWrapper {
   flex: 1 1;
-  width: 33%;
+  width: 30%;
   padding: 1em;
   height: 100%;
 }
+.servicesContainer {
+  flex: 1 1 50%;
+  width: 65%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.buttonContainer {
+  width: 1%;
+  flex: 1 1 1%;
+}
+
 
 .latLong {
   border-top: 2px solid;
@@ -42,14 +57,10 @@
   width: 100%;
 }
 
-.servicesContainer {
-  /*border: 2px solid red;*/
-  flex: 1 1;
-  width: 66%;
-}
 
-.personalcontainer {
-  /*border: 3px solid orange;*/
+.personalContainer {
+  padding: 1em;
+  margin: 1em;
   display: flex;
   width: 100%;
 }
