--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
@@ -1,3 +1,4 @@
+<h1>Inbox</h1>
 <div *ngFor="let conversation of messages" class="panel panel-default">
   <div class="panel-body">
     <span (click)="openHistory.emit(conversation.slice().reverse())">
