--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
@@ -5,3 +5,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.inboxContainer {
+  border: 2px solid red;
+  height: 35%;
+  width: 100%;
+  overflow: scroll;
+}
