--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,6 +1,6 @@
 <customer-navbar [customerId]="customerId"></customer-navbar>
 <h1>{{profile.name}}'s profile</h1>
-<img [src]=profile.image_url />
+<img [src]="profile.image_url" />
 <button>Edit</button>
 <p>Location</p>
 <div>
