remove customerId input

--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,7 +1,5 @@
 <h2>Hello world</h2>
-<customer-navbar
-  [customerId]="stylistProfile.id"
-></customer-navbar>
+<customer-navbar></customer-navbar>
 Bookings:
 <div *ngFor="let booking of bookings; let i = index;">
   <booking
