Add stylist map component to stylist homepage that displays bookings pinned on map

--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -9,3 +9,10 @@ Bookings:
     (completeBooking)="completeBooking($event, i)"
   ></booking>
 </div>
+<div class="mapContainer">
+  <stylist-map class="map"
+    [stylistId]="stylistProfile.id"
+    [stylistLocation]="stylistProfile.billingaddress"
+  >
+  </stylist-map>
+</div>
